--- a/.travis.yml
+++ b/.travis.yml
@@ -17,4 +17,8 @@ perl:
   - "5.22"
 
 script:
-  - dzil test -v
+  - prove -lv t
+  - cpanm Alien::Base -n
+  - prove -lv t
+  - cpanm FFI::Platypus -n
+  - prove -lv t
