require recent ParseXS

--- a/dist.ini
+++ b/dist.ini
@@ -16,8 +16,8 @@ remove = strict
 remove = warnings
 remove = base
 
-;[Prereqs]
-;Foo::Bar = 0
+[Prereqs]
+ExtUtils::ParseXS = 3.21
 
 [Author::Plicease::Upload]
 cpan = 0
