--- a/dist.ini
+++ b/dist.ini
@@ -10,14 +10,28 @@ version          = 0.01
 travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
+diag          = +FFI::Platypus
 
 [RemovePrereqs]
 remove = strict
 remove = warnings
 remove = base
+remove = Env
+remove = File::Spec
+remove = File::Temp
+remove = Text::ParseWords
+
+; comes with Test::Stream
+remove = Test::Stream::Context
+remove = Test::Stream::Exporter
+remove = Test::Stream::Plugin
+
+; optional
+remove = FFI::Platypus
 
 [Prereqs]
 ExtUtils::ParseXS = 3.21
+Test::Stream      = 1.302023
 
 [Author::Plicease::Upload]
 cpan = 0
