include AB in diagnostic

--- a/dist.ini
+++ b/dist.ini
@@ -11,6 +11,7 @@ travis_status = 1
 release_tests = 1
 installer     = Author::Plicease::MakeMaker
 diag          = +FFI::Platypus
+diag          = +Alien::Base
 
 [RemovePrereqs]
 remove = strict
@@ -28,6 +29,7 @@ remove = Test::Stream::Plugin
 
 ; optional
 remove = FFI::Platypus
+remove = Alien::Base
 
 [Prereqs]
 ExtUtils::ParseXS = 3.21
