--- a/dist.ini
+++ b/dist.ini
@@ -18,6 +18,7 @@ remove = strict
 remove = warnings
 remove = base
 remove = Env
+remove = Carp
 remove = File::Spec
 remove = File::Temp
 remove = Text::ParseWords
@@ -26,6 +27,7 @@ remove = Text::ParseWords
 remove = Test::Stream::Context
 remove = Test::Stream::Exporter
 remove = Test::Stream::Plugin
+remove = Test::Stream::Plugin::Subtest
 
 ; optional
 remove = FFI::Platypus
