--- a/dist.ini
+++ b/dist.ini
@@ -31,6 +31,7 @@ remove = Test::Stream::Plugin::Subtest
 
 ; optional
 remove = FFI::Platypus
+remove = FFI::CheckLib
 remove = Alien::Base
 
 [Prereqs]
