synthetic test and example using Alien::Libarchive

--- a/dist.ini
+++ b/dist.ini
@@ -12,6 +12,7 @@ release_tests = 1
 installer     = Author::Plicease::MakeMaker
 diag          = +FFI::Platypus
 diag          = +Alien::Base
+diag          = +Alien::Libarchive
 
 [RemovePrereqs]
 remove = strict
@@ -33,6 +34,9 @@ remove = Test::Stream::Plugin::Subtest
 remove = FFI::Platypus
 remove = FFI::CheckLib
 remove = Alien::Base
+
+; optional and for testing only 
+remove = Alien::Libarchive
 
 [Prereqs]
 ExtUtils::ParseXS = 3.21
