let us also test with Alien::Libarchive

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,3 +20,4 @@ script:
   - perl util/prove
   - perl util/prove Alien::Base
   - perl util/prove FFI::Platypus
+  - perl util/prove Alien::Libarchive
