--- a/dist.ini
+++ b/dist.ini
@@ -13,6 +13,7 @@ installer     = Author::Plicease::MakeMaker
 diag          = +FFI::Platypus
 diag          = +Alien::Base
 diag          = +Alien::Libarchive
+diag          = +Acme::Alien::DontPanic
 
 [RemovePrereqs]
 remove = strict
