--- a/dist.ini
+++ b/dist.ini
@@ -24,6 +24,10 @@ remove = Carp
 remove = File::Spec
 remove = File::Temp
 remove = Text::ParseWords
+remove = File::Basename
+remove = File::Path
+remove = File::Copy
+remove = Config
 
 ; comes with Test::Stream
 remove = Test::Stream::Context
