--- a/dist.ini
+++ b/dist.ini
@@ -14,6 +14,7 @@ diag          = +FFI::Platypus
 diag          = +Alien::Base
 diag          = +Alien::Libarchive
 diag          = +Acme::Alien::DontPanic
+irc           = irc://irc.perl.org/#native
 
 [RemovePrereqs]
 remove = strict
