move to Perl5-Alien

--- a/dist.ini
+++ b/dist.ini
@@ -15,6 +15,7 @@ diag          = +Alien::Base
 diag          = +Alien::Libarchive
 diag          = +Acme::Alien::DontPanic
 irc           = irc://irc.perl.org/#native
+github_user   = Perl5-Alien
 
 [RemovePrereqs]
 remove = strict
