--- a/dist.ini
+++ b/dist.ini
@@ -26,7 +26,6 @@ remove = Env
 remove = Carp
 remove = File::Spec
 remove = File::Temp
-remove = Text::ParseWords
 remove = File::Basename
 remove = File::Path
 remove = File::Copy
@@ -52,6 +51,7 @@ remove = Alien::Libarchive
 ExtUtils::ParseXS = 3.21
 Test2 = 1.302015
 Test2::Suite = 0.000030
+Text::ParseWords = 3.26
 
 [Author::Plicease::Upload]
 cpan = 1
